force-app/main/default/objects/Consultation__c/fields/Plan_To_Start_in_the_Next_Year_SS1__c.field-meta.xml
<CustomField>
    <fullName>Plan_To_Start_in_the_Next_Year_SS1__c</fullName>
    <inlineHelpText>Sub-Section 1 - Not Started:  Do you plan to start your business within the next year?</inlineHelpText>
    <label>Plan to Start in the Next Year?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>