force-app/main/default/objects/Consultation__c/fields/Rating_on_Service__c.field-meta.xml
<CustomField>
    <fullName>Rating_on_Service__c</fullName>
    <inlineHelpText>How would you rate the service you received from Enterprise Toronto?</inlineHelpText>
    <label>Rating on Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highly Effective</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Manageable</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Ineffective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>