force-app/main/default/objects/Consultation__c/fields/Referred_To__c.field-meta.xml
<CustomField>
    <fullName>Referred_To__c</fullName>
    <label>Referred To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canada Business Ontario (FedDev)</fullName>
            </value>
            <value>
                <fullName>MaRS</fullName>
            </value>
            <value>
                <fullName>CFDC</fullName>
            </value>
            <value>
                <fullName>Municipal EcDev</fullName>
            </value>
            <value>
                <fullName>Toronto Board of Trade</fullName>
            </value>
            <value>
                <fullName>Incubator - DMZ</fullName>
            </value>
            <value>
                <fullName>Incubator - TBDC</fullName>
            </value>
            <value>
                <fullName>Incubator - Kinetic Cafe</fullName>
            </value>
            <value>
                <fullName>Incubator - Fashion Incubator</fullName>
            </value>
            <value>
                <fullName>Incubator - CSI</fullName>
            </value>
            <value>
                <fullName>Financial - TD</fullName>
            </value>
            <value>
                <fullName>Financial - ACCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>