force-app/main/default/objects/Consultation__c/fields/Satisfaction_FollowUp__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_FollowUp__c</fullName>
    <label>Satisfaction Survey Follow-Up</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>