force-app/main/default/objects/Consultation__c/fields/Satisfaction_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Survey_Completed__c</fullName>
    <description>Identifies if client satisfaction survey has been completed.</description>
    <label>Satisfaction Survey Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>