force-app/main/default/objects/Consultation__c/fields/Since_Engaging_ET_did_you_Start_SS2__c.field-meta.xml
<CustomField>
    <fullName>Since_Engaging_ET_did_you_Start_SS2__c</fullName>
    <inlineHelpText>Sub-Section 2 - New Business: Since engaging Enterprise Toronto, did you start your business?</inlineHelpText>
    <label>Since Engaging ET, did you Start?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>