force-app/main/default/objects/Consultation__c/fields/Sponsor_TruShield__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_TruShield__c</fullName>
    <description>Opt in for TruShield communications.</description>
    <label>Sponsor - TruShield</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>