force-app/main/default/objects/Consultation__c/fields/Sponsor_VistaPrint__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_VistaPrint__c</fullName>
    <label>Sponsor - VistaPrint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>