force-app/main/default/objects/Consultation__c/fields/Target_Customers__c.field-meta.xml
<CustomField>
    <fullName>Target_Customers__c</fullName>
    <label>Target Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>