force-app/main/default/objects/Consultation__c/fields/Where_can_ET_Improve__c.field-meta.xml
<CustomField>
    <fullName>Where_can_ET_Improve__c</fullName>
    <inlineHelpText>Please tell us where we can improve?</inlineHelpText>
    <label>Where can ET Improve?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>