force-app/main/default/objects/Consultation__c/listViews/ET_City_Hall_Clients.listView-meta.xml
<ListView>
    <fullName>ET_City_Hall_Clients</fullName>
    <columns>NAME</columns>
    <columns>Contact_Consultation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enterprise_Toronto_Location__c</field>
        <operation>equals</operation>
        <value>City Hall</value>
    </filters>
    <label>ET - City Hall Clients</label>
    <sharedTo>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_BIC</roleAndSubordinates>
        <roleAndSubordinates>ES_ET</roleAndSubordinates>
    </sharedTo>
</ListView>