force-app/main/default/objects/Consultation__c/listViews/ET_Consultations.listView-meta.xml
<ListView>
    <fullName>ET_Consultations</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ET_Client_Status__c</columns>
    <columns>Satisfaction_FollowUp__c</columns>
    <columns>Satisfaction_Survey_Completed__c</columns>
    <columns>Contact_Consultation__c</columns>
    <columns>Email__c</columns>
    <columns>Enterprise_Toronto_Location__c</columns>
    <columns>CMailingAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>ET Consultations</label>
</ListView>