force-app/main/default/objects/Consultation__c/listViews/ET_Consultations_Today.listView-meta.xml
<ListView>
    <fullName>ET_Consultations_Today</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>ET - Consultations (Today)</label>
    <sharedTo>
        <role>EDC_Admin</role>
        <role>ES_Admin</role>
        <role>ES_BIC</role>
        <role>ES_ET</role>
    </sharedTo>
</ListView>